--- a/wlan/WCNSS_qcom_cfg.ini
+++ b/wlan/WCNSS_qcom_cfg.ini
@@ -463,6 +463,14 @@ gActionOUIITOExtension=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01 000B86 
 # Enable/Disable rtt sta mac randomization
 enable_rtt_mac_randomization=1
 
+#Configures Channel Bonding in 24 GHz
+gChannelBondingMode24GHz=1
+
+#TheCrazyLex@PA Prefer connecting to 5Ghz AP
+#even if its RSSI is lower by 5dBm than the 2.4Ghz AP.
+gRoamPrefer5GHz=1
+gSelect5GHzMargin=5
+
 #Enable Target Wake Time support
 enable_twt=0
 
